org.mmisw.ont - Ontology and Term URI resolver 
Carlos Rueda - MMI / MBARI
$Id$

ChangeLog


2009-12-18   1.5.0.beta4
	- org.mmisw.ont.graph.allegro: new package for AG related types
	- org.mmisw.ont.graph.mem: new package for the previous memory based model
	
	Have been looking at other possible triple stores (Open Anzo, 4store, sesame, TDB, ...)
	in other to have other options. 
	

2009-12-17   1.5.0.beta4
	*** Continuing enabling AllegroGraph as persistent triple store ***
	- Enabling association of named graphs
	- OntGraphAG._loadOntology:
		- ontologyUri used as graph name for the ontology
	- Argh!: tests of this on my local AG installation caused some very weird behavior!
	  - at some point I got the "exceeded 50 million triple limit"! (my local repository
	    is less than 30K triples!)
	  - query performance really bad! actually it may be not working at all (even though that
	    'top' shows me >99% cpu usage!
	  - however, the deployment at MMIWEB seems to be working fine.
	  
	
2009-12-16   1.5.0.beta3
	*** Continuing enabling AllegroGraph as persistent triple store ***
	- enabling direct SPARQL query dispatch with AllegroGraph so reasoning can be enabled.
	- unfortunately, AG serializers are not working ...
	- TODO: query dispatch according to desired format needs more work and clean-up!
	 

2009-12-14   1.5.0.beta2
	*** Continuing enabling AllegroGraph as persistent triple store ***
	- Re-enabling inferences (issue #175 Enable inference mechanism)
	- OntGraphAG.doReInitModel: 
		- load the skos properties model, inf_properties.nt (N-triples format required)
	- OntGraphAG.executeQuery: 
		- creates a Jena inference model on the fly using inf_rules.txt as in OntGraphMem.
		  TODO: there is perhaps a mechanism to encode the rules in the triple store
		         so it's not necessary to associate them every time a query is issued.
		- NOTE: although the inference model creation takes a fraction of a second (in my test